--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-azure-ad": "^4.3.5",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3"
   },
@@ -22,4 +24,4 @@
     "nodemon": "^3.1.0",
     "typescript": "^5.3.3"
   }
-} 
+}
